feat: transaction match rules
